[gd_scene load_steps=2 format=3 uid="uid://m1fpd4felkdb"]

[ext_resource type="Script" uid="uid://chn5jxoyvg5qi" path="res://src/client/ui/main_menu/main_menu.gd" id="1_30o1h"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_30o1h")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/separation = 17

[node name="ServerPort" type="LineEdit" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "50301"

[node name="ServerStart" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Start Server"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/separation = 17

[node name="ClientIPPort" type="LineEdit" parent="HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "192.168.0.1:50301"

[node name="ClientUsername" type="LineEdit" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "laws"

[node name="ClientStart" type="Button" parent="HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Join Server"

[node name="Client" type="Label" parent="."]
visible = false
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "You are client"
vertical_alignment = 2

[node name="Server" type="Label" parent="."]
visible = false
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "You are server"
vertical_alignment = 2

[node name="FPS" type="Label" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 25.0
offset_right = 69.0
offset_bottom = 48.0
text = "1234"

[connection signal="button_up" from="HBoxContainer/VBoxContainer/ServerStart" to="." method="_on_server_start_button_up"]
[connection signal="button_up" from="HBoxContainer/VBoxContainer2/ClientStart" to="." method="_on_client_start_button_up"]
